<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">字体</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="feed_back_content_tips">反馈内容：</string>
    <string name="feed_back_contacts_tips">您的Email或者QQ：</string>
    <string name="send_successed">发送成功!</string>
    <string name="recover_system_font_txt">恢复系统默认字体</string>
    <string name="qq">官方QQ群:185378427"</string>
    <string name="boutique">精品</string>
    <string name="all">全部</string>
    <string name="get_points">获取积分</string>
    <string name="font_preview">预览</string>
    <string name="font_download">下载</string>
    <string name="font_apply">应用</string>
    <string name="font_install">安装</string>
    <string name="font_applying">"正在应用中&#8230;"</string>
    <string name="font_apply_success">字体应用成功</string>
    <string name="font_download_file_is_not_exist">fontxiuxu下的download文件夹不存在或则fontxiuxiu已被删除</string>
    <string name="font_path">download</string>
    <string name="current_sdcard_not_available">当前sd卡不可用</string>
    
    <string name="obtain_more_points">获取更多积分</string>
	
	<string name="feed_back_submit">提交</string>
	
	<string name="font_apply_only_in_meitu2">无此权限，请使用美图2使用或者测试！</string>
	
	<string name="special_awards">"恭喜你，获得额外奖励："</string>
	
	<string name="feed_back_hint_text">把您碰到好看的字体反馈给我们，我们将第一时间更新！</string>
	
	<string name="contact_hint_text">publicdnf@163.com</string>
	
	<string name="no_much_points">没有足够的积分购买，请点击获取积分按钮赚取</string>
	
	<string name="buy_success_tips">成功购买，请按照提示操作即可享受免费版</string>
	
	<string name="resource_file">mtfontlist.xml</string>
	
	<!-- pull refresh start -->
	<string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <!-- pull refresh end -->

	<!-- gridview pull start-->
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新\u2026</string>
    
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中\u2026</string>
	<!-- gridview pull end -->
	
	
	<string name="font_download_title">字体下载</string>
</resources>