<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager 
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_download_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/font_download" />

        <Button
            android:id="@+id/btn_apply_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/font_apply"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/btn_install_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_background"
            android:text="@string/font_install"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>